--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/alpinejs": "^3.7.1",
     "alpinejs": "^3.12.0",
     "astro": "^2.1.3",
+    "astro-icon": "^0.8.0",
     "tailwindcss": "^3.2.7"
   }
 }
